# vsql-prometheus-exporter

./: AGENTS.md  CMakeLists.txt  README.md  local-ci.sh  manifest.json
.github/workflows/: release.yml  test.yml
docker/ci-validation/: Dockerfile  local-ci.sh
mysql-test/r/: ._metrics_endpoint.result  basic.result  format_validation.result  global_variables.result  metrics_endpoint.result  replica_status.result  scrape_counter.result
mysql-test/t/: basic.test  format_validation.test  global_variables.test  metrics_endpoint.test  replica_status.test  scrape_counter.test
scripts/: local-ci.sh
src/: extension.cc
